--- a/projects/jtProject/authors.html
+++ b/projects/jtProject/authors.html
@@ -82,7 +82,7 @@
               </div>
             </div>
             <ul class="t-topListCtrl t-topRightSection">
-              <li class="t-addArticleBtn">
+              <li class="t-addArticleBtn pointer">
                 <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="t-hoverable">
                   <use xlink:href="#path0_fill1" fill="#FFF" class="t-svgBg"></use>
                   <use xlink:href="#path1_fill1" transform="translate(8 6)" fill="#E0E0E0" class="t-svgFigure"></use>
@@ -1170,10 +1170,16 @@
                 </div>
             </div>
         </section>
+        <div class="cursor">
+            <div class="dot"></div>
+            <div class="loader"></div>
+        </div>
     </div>
     <script src="js/vendor.min.js"></script>
     <script src="js/plugins/jquery.formstyler.min.js"></script>
     <script src="js/plugins/TweenLite.min.js"></script>
+    <script src="js/plugins/TweenMax.min.js"></script>
+    <script src="js/plugins/jquery.mousewheel.min.js"></script>
     <script src="js/plugins/editor.js"></script>
     <script src="js/plugins/svg4everybody.min.js"></script>
     <script src="js/main.min.js"></script>
