--- a/projects/jtProject/profile.html
+++ b/projects/jtProject/profile.html
@@ -156,37 +156,37 @@
               <div class="t-profileNameSettings t-profileSettingsItem">
                 <div class="t-labelHolder">
                   <label class="t-infoTitle" for="name">Ваше имя</label>
-                  <svg class="t-editBtn" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_fill" class="t-svgFigure" transform="translate(8 8)" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_fill" fill-rule="evenodd" d="M7.87.507a1 1 0 0 1-.163 1.2l-6 6A1 1 0 1 1 .293 6.293L3.74 2.846l-.497.124a1 1 0 1 1-.486-1.94l4-1A1 1 0 0 1 7.87.507z"/></defs></svg>
+                  <svg class="t-editBtn t-hoverable" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_fill" class="t-svgFigure" transform="translate(8 8)" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_fill" fill-rule="evenodd" d="M7.87.507a1 1 0 0 1-.163 1.2l-6 6A1 1 0 1 1 .293 6.293L3.74 2.846l-.497.124a1 1 0 1 1-.486-1.94l4-1A1 1 0 0 1 7.87.507z"/></defs></svg>
                 </div>
                 <input class="t-infoHolder" disabled id="name" type="text" value="Takeoff Юрьевич">
                 <div class="t-saveBtnsHolder">
                   <button type="button" class="t-btn t-btnSave">Сохранить</button>
                   <span class="t-errorHolder"></span>
-                  <svg class="t-closeEdit" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_stroke" transform="translate(9 9)" class="t-svgFigure" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_stroke" d="M.707-.707A1 1 0 0 0-.707.707L.707-.707zm4.586 7.414a1 1 0 0 0 1.414-1.414L5.293 6.707zm-6-1.414A1 1 0 0 0 .707 6.707L-.707 5.293zM6.707.707A1 1 0 0 0 5.293-.707L6.707.707zm-7.414 0l6 6 1.414-1.414-6-6L-.707.707zm1.414 6l6-6L5.293-.707l-6 6L.707 6.707z"/></defs></svg>
+                  <svg class="t-closeEdit t-hoverable" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_stroke" transform="translate(9 9)" class="t-svgFigure" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_stroke" d="M.707-.707A1 1 0 0 0-.707.707L.707-.707zm4.586 7.414a1 1 0 0 0 1.414-1.414L5.293 6.707zm-6-1.414A1 1 0 0 0 .707 6.707L-.707 5.293zM6.707.707A1 1 0 0 0 5.293-.707L6.707.707zm-7.414 0l6 6 1.414-1.414-6-6L-.707.707zm1.414 6l6-6L5.293-.707l-6 6L.707 6.707z"/></defs></svg>
                 </div>
               </div>
               <div class="t-profileNameSettings t-profileSettingsItem">
                 <div class="t-labelHolder">
                   <label class="t-infoTitle" for="mail">Почта</label>
-                  <svg class="t-editBtn" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_fill" class="t-svgFigure" transform="translate(8 8)" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_fill" fill-rule="evenodd" d="M7.87.507a1 1 0 0 1-.163 1.2l-6 6A1 1 0 1 1 .293 6.293L3.74 2.846l-.497.124a1 1 0 1 1-.486-1.94l4-1A1 1 0 0 1 7.87.507z"/></defs></svg>
+                  <svg class="t-editBtn t-hoverable" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_fill" class="t-svgFigure" transform="translate(8 8)" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_fill" fill-rule="evenodd" d="M7.87.507a1 1 0 0 1-.163 1.2l-6 6A1 1 0 1 1 .293 6.293L3.74 2.846l-.497.124a1 1 0 1 1-.486-1.94l4-1A1 1 0 0 1 7.87.507z"/></defs></svg>
                 </div>
                 <input class="t-infoHolder" disabled id="mail" type="email" value="takeoff@mail.ru">
                 <div class="t-saveBtnsHolder">
                   <button type="button" class="t-btn t-btnSave">Сохранить</button>
                   <span class="t-errorHolder"></span>
-                  <svg class="t-closeEdit" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_stroke" transform="translate(9 9)" class="t-svgFigure" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_stroke" d="M.707-.707A1 1 0 0 0-.707.707L.707-.707zm4.586 7.414a1 1 0 0 0 1.414-1.414L5.293 6.707zm-6-1.414A1 1 0 0 0 .707 6.707L-.707 5.293zM6.707.707A1 1 0 0 0 5.293-.707L6.707.707zm-7.414 0l6 6 1.414-1.414-6-6L-.707.707zm1.414 6l6-6L5.293-.707l-6 6L.707 6.707z"/></defs></svg>
+                  <svg class="t-closeEdit t-hoverable" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_stroke" transform="translate(9 9)" class="t-svgFigure" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_stroke" d="M.707-.707A1 1 0 0 0-.707.707L.707-.707zm4.586 7.414a1 1 0 0 0 1.414-1.414L5.293 6.707zm-6-1.414A1 1 0 0 0 .707 6.707L-.707 5.293zM6.707.707A1 1 0 0 0 5.293-.707L6.707.707zm-7.414 0l6 6 1.414-1.414-6-6L-.707.707zm1.414 6l6-6L5.293-.707l-6 6L.707 6.707z"/></defs></svg>
                 </div>
               </div>
               <div class="t-profileNameSettings t-profileSettingsItem">
                 <div class="t-labelHolder">
                   <label class="t-infoTitle" for="siteAddress">Адрес на сайте</label>
-                  <svg class="t-editBtn" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_fill" class="t-svgFigure" transform="translate(8 8)" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_fill" fill-rule="evenodd" d="M7.87.507a1 1 0 0 1-.163 1.2l-6 6A1 1 0 1 1 .293 6.293L3.74 2.846l-.497.124a1 1 0 1 1-.486-1.94l4-1A1 1 0 0 1 7.87.507z"/></defs></svg>
+                  <svg class="t-editBtn t-hoverable" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_fill" class="t-svgFigure" transform="translate(8 8)" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_fill" fill-rule="evenodd" d="M7.87.507a1 1 0 0 1-.163 1.2l-6 6A1 1 0 1 1 .293 6.293L3.74 2.846l-.497.124a1 1 0 1 1-.486-1.94l4-1A1 1 0 0 1 7.87.507z"/></defs></svg>
                 </div>
                 <input class="t-infoHolder" disabled id="siteAddress" value="55535353" type="text">
                 <div class="t-saveBtnsHolder">
                   <button type="button" class="t-btn t-btnSave">Сохранить</button>
                   <span class="t-errorHolder">Error</span>
-                  <svg class="t-closeEdit" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_stroke" transform="translate(9 9)" class="t-svgFigure" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_stroke" d="M.707-.707A1 1 0 0 0-.707.707L.707-.707zm4.586 7.414a1 1 0 0 0 1.414-1.414L5.293 6.707zm-6-1.414A1 1 0 0 0 .707 6.707L-.707 5.293zM6.707.707A1 1 0 0 0 5.293-.707L6.707.707zm-7.414 0l6 6 1.414-1.414-6-6L-.707.707zm1.414 6l6-6L5.293-.707l-6 6L.707 6.707z"/></defs></svg>
+                  <svg class="t-closeEdit t-hoverable" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fill" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_stroke" transform="translate(9 9)" class="t-svgFigure" fill="#E0E0E0"/><defs><path id="path0_fill" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_stroke" d="M.707-.707A1 1 0 0 0-.707.707L.707-.707zm4.586 7.414a1 1 0 0 0 1.414-1.414L5.293 6.707zm-6-1.414A1 1 0 0 0 .707 6.707L-.707 5.293zM6.707.707A1 1 0 0 0 5.293-.707L6.707.707zm-7.414 0l6 6 1.414-1.414-6-6L-.707.707zm1.414 6l6-6L5.293-.707l-6 6L.707 6.707z"/></defs></svg>
                 </div>
               </div>
             </div>
@@ -267,10 +267,16 @@
           </div>
         </div>
       </main>
+      <div class="cursor">
+        <div class="dot"></div>
+        <div class="loader"></div>
+      </div>
     </div>
     <script src="js/vendor.min.js"></script>
     <script src="js/plugins/jquery.formstyler.min.js"></script>
     <script src="js/plugins/TweenLite.min.js"></script>
+    <script src="js/plugins/TweenMax.min.js"></script>
+    <script src="js/plugins/jquery.mousewheel.min.js"></script>
     <script src="js/plugins/editor.js"></script>
     <script src="js/plugins/svg4everybody.min.js"></script>
     <script src="js/main.min.js"></script>
