--- a/projects/jtProject/authors.html
+++ b/projects/jtProject/authors.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>ЖТ</title>
-    <link rel="stylesheet" href="css/plugins/normalize.css">
-    <link rel="stylesheet" href="css/plugins/medium-editor.css">
-    <link rel="stylesheet" href="css/plugins/jquery.formstyler.theme.css">
-    <link rel="stylesheet" href="css/plugins/jquery.formstyler.css">
-    <link rel="stylesheet" href="css/plugins/default.css" class="getStyles">
-    <link rel="stylesheet" href="css/main.min.css">
+      <link rel="stylesheet" href="css/plugins/normalize.css">
+      <link rel="stylesheet" href="css/plugins/medium-editor.css">
+      <link rel="stylesheet" href="css/plugins/jquery.formstyler.theme.css">
+      <link rel="stylesheet" href="css/plugins/jquery.formstyler.css">
+      <link rel="stylesheet" href="css/plugins/default.css" class="getStyles">
+      <link rel="stylesheet" href="css/plugins/medium-editor-insert-plugin.min.css">
+      <link rel="stylesheet" href="css/main.min.css">
   </head>
   <body>
     <div class="t-mainWrapper">
@@ -1126,7 +1127,7 @@
         </div>
       </div>
       <section class="t-searchSection t-absolute">
-          <div class="t-searchClose">
+          <div class="t-searchClose t-closePos">
               <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <use xlink:href="#path0_fill6" fill="#FFF" class="t-svgBg"></use>
                   <use xlink:href="#path1_stroke6" transform="translate(7 8)" fill="#E0E0E0" class="t-svgFigure"></use>
@@ -1143,7 +1144,7 @@
         <div class="t-searchOutput"></div>
       </section>
         <section class="t-fixed t-addArticleModalWrapper">
-            <div class="t-addArticleClose">
+            <div class="t-addArticleClose t-closePos">
                 <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <use xlink:href="#path0_fill6" fill="#FFF" class="t-svgBg"></use>
                     <use xlink:href="#path1_stroke6" transform="translate(7 8)" fill="#E0E0E0" class="t-svgFigure"></use>
@@ -1163,7 +1164,7 @@
                     <option value="4">Категория 3</option>
                     <option value="5">Категория 4</option>
                 </select>
-                <p class="t-textArea editable" data-placeholder="Ваш текст"></p>
+                <div class="t-textArea editable" data-placeholder="Ваш текст"></div>
                 <div class="t-addArticleBtnsHolder">
                     <button class="t-btn t-btnModeration">Отправить на модерацию</button>
                     <button class="t-btn t-btnSaveArticle">Сохранить</button>
@@ -1180,7 +1181,11 @@
     <script src="js/plugins/TweenLite.min.js"></script>
     <script src="js/plugins/TweenMax.min.js"></script>
     <script src="js/plugins/jquery.mousewheel.min.js"></script>
+    <script src="js/plugins/jquery.iframe-transport.js"></script>
+    <script src="js/plugins/jquery.fileupload.js"></script>
     <script src="js/plugins/editor.js"></script>
+    <script src="js/plugins/handlebars.runtime-v4.0.11.js"></script>
+    <script src="js/plugins/medium-editor-insert-plugin.min.js"></script>
     <script src="js/plugins/svg4everybody.min.js"></script>
     <script src="js/main.min.js"></script>
   </body>
